
  * Made the testme plugin test work.
  * Removed the CATCH_CHECK() from the plugin. Version 3.x complains about it.
  * Enhanced the plugin test by calling the it_worked() function (made virtual).
  * Changed version verification, if negative, fail.
  * Added the GLOB_FLAG_EMPTY to allow for no files when globbing.
  * Actually install the plugins.h header file.
  * Link the SNAPCATCH2 libray to the testme plugin (although at this point
    that's not useful since it is considered _detached_).
  * Various clean ups (docs, function order).

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 07 Mar 2022 11:48:57 -0800

cppthread (1.1.11.2~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Mar 2022 22:08:16 -0800

cppthread (1.1.11.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Feb 2022 12:36:35 -0800

cppthread (1.1.11.0~bionic) bionic; urgency=high

  *  Added a function to clear the log counters.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 02 Feb 2022 20:58:34 -0800

cppthread (1.1.10.0~bionic) bionic; urgency=high

  * Moved our get_thread_count() function to the cppthread library.
  * Fixed fifo time out usage; it will now return if it times out.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 01 Sep 2021 15:24:15 -0700

cppthread (1.1.9.0~bionic) bionic; urgency=high

  * Updated the tests to support the new libexcept change.
  * Moved the process::get_max_pid() to the cppthread library.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 28 Aug 2021 18:25:37 -0700

cppthread (1.1.8.0~bionic) bionic; urgency=high

  * Added a get_boot_id() function (will be available to the logger).
  * Added a plugin implementation (load/unload).
  * Added functions to get/set individual thread system name.
  * Added a re-lock() and is_locked() to the guard object.
  * Allow signalling mutexes without locking them first.
